Added services section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,20 @@
       <div class="services">
         <h2>Våra Tjänster</h2>
         <div class="service-content">
-          <div class="service-galery"></div>
+          <div class="service-galery">
+            <div class="service-img">
+              <img src="images/dog-1850465_1920.jpg" alt="" />
+            </div>
+            <div class="service-img">
+              <img src="images/dog-1850465_1920.jpg" alt="" />
+            </div>
+            <div class="service-img">
+              <img src="images/dog-1850465_1920.jpg" alt="" />
+            </div>
+            <div class="service-img">
+              <img src="images/dog-1850465_1920.jpg" alt="" />
+            </div>       
+          </div>
           <div class="services-text">
             <p>
               Sebbes bil har värkat i Toftanäs i ca 2 år och har skapad en bred
