Added images footer for temporery display

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <ul class="nav-links">
           <li><a href="#">HEM</a></li>
-          <li><a href="#about">OM OSS</a></li>
-          <li><a href="#services">GALLERI</a></li>
-          <li><a href="#">KONTAKT</a></li>
+          <li><a href="#aboutus">OM OSS</a></li>
+          <li><a href="#galery">GALLERI</a></li>
+          <li><a href="#contact">KONTAKT</a></li>
         </ul>
         <div class="hamburger">
           <div class="line1"></div>
@@ -32,21 +32,21 @@
           <button class="btn">Boka nu</button>
         </div>
       </div>
-      <div class="services">
-        <h2>Våra Tjänster</h2>
+      <div class="services" id="aboutus">
+        <h2>Om oss</h2>
         <div class="service-content">
           <div class="service-galery">
             <div class="service-img">
-              <img src="images/dog-1850465_1920.jpg" alt="" />
+              <img src="images/kamrem.jpeg" alt="" />
             </div>
             <div class="service-img">
-              <img src="images/dog-1850465_1920.jpg" alt="" />
+              <img src="images/topp.jpeg" alt="" />
             </div>
             <div class="service-img">
-              <img src="images/dog-1850465_1920.jpg" alt="" />
+              <img src="images/plat.jpeg" alt="" />
             </div>
             <div class="service-img">
-              <img src="images/dog-1850465_1920.jpg" alt="" />
+              <img src="images/ac.jpeg" alt="" />
             </div>       
           </div>
           <div class="services-text">
@@ -68,6 +68,43 @@
         </div>
       </div>
     </main>
+    <section class="galery" id="galery">
+      <h2>Bildgalleri</h2>
+      <div class="image-container">
+        <div class="images">
+          <img src="/images/1.jpeg" alt="">
+        </div>
+        <div class="images">
+          <img src="/images/2.jpeg" alt="">
+        </div>
+        <div class="images">
+          <img src="/images/3.jpeg" alt="">
+        </div>
+        <div class="images">
+          <img src="/images/4.jpeg" alt="">
+        </div>
+        <div class="images">
+          <img src="/images/5.jpeg" alt="">
+        </div>
+        <div class="images">
+          <img src="/images/6.jpeg" alt="">
+        </div>
+        <div class="images">
+          <img src="/images/7.jpeg" alt="">
+        </div>
+        <div class="images">
+          <img src="/images/8.jpeg" alt="">
+        </div>
+
+      </div>
+    </section>
+    <footer>
+      <div class="footer-content">
+        <h3>Sebbesbil</h3>
+        <h3>0704275466</h3>
+        <h3>Sidan under uppbyggnad</h3>
+        </div>
+    </footer> 
     <script src="script.js"></script>
   </body>
 </html>
